Se creó con Colab

--- a/Copia_de_DOS+PDOS.ipynb
+++ b/Copia_de_DOS+PDOS.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**IR HASTA ABAJO DE TODO PARA EL GRÁFICO FINAL.**"
+      ],
+      "metadata": {
+        "id": "eyNywHLuRETx"
+      },
+      "id": "eyNywHLuRETx"
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
