Se creó con Colab

--- a/DOS+PDOS.ipynb
+++ b/DOS+PDOS.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**IR HASTA ABAJO DE TODO PARA VER EL GRÁFICO PRESENTADO EN EL TRABAJO**"
+      ],
+      "metadata": {
+        "id": "R98krkXgUbG_"
+      },
+      "id": "R98krkXgUbG_"
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
